--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -62,19 +62,18 @@
                         <div class="upcoming-event-content">
                             <span class="label label-primary upcoming-event-label">Next coming event</span>
                             <div>
-                                <div class="timer-col"> <span id="days"><%= @days_left %></span> <span class="timer-type">Days left!</span> </div>
+                              <div class="timer-col"> <span id="days"><%= @days_left %></span> <span class="timer-type">Days left!</span> </div>
                             </div>
 
-                            <h3><a href="single-event.html" class="event-title">Youth participation</a></h3>
-                            <span class="meta-data">On <span class="event-date">13 Jul, 15</span> at <span class="event-time">08:00 AM</span> at</span>
-                            <span class="meta-data event-location"> <span class="event-location-address">State Route, Madison US</span></span>
+                            <h3><%= link_to @upcoming_event.name, event_path(@upcoming_event), class:"event-title" %></h3>
+                            <span class="meta-data">On <span class="event-date"><%= @upcoming_event.start_date.strftime("%A, %b. %d, %Y") %></span> at <span class="event-time"><%= @upcoming_event.start_time.strftime("%I:%M%p") %></span> at</span>
+                            <span class="meta-data event-location"> <span class="event-location-address"><%= @upcoming_event.address %>, <%= @upcoming_event.city %> <%= @upcoming_event.zip_code %></span></span>
                         </div>
                         <div class="upcoming-event-footer">
-                          <a href="#" class="pull-right btn btn-primary btn-sm event-tickets event-register-button">Register</a>
                             <ul class="action-buttons">
                                 <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
-                                <li title="Get directions" class="hidden-xs"><a href="#" class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
-                                <li title="Contact event manager"><a href="#" data-toggle="modal" data-target="#Econtact" class="event-contact-link"><i class="icon-mail"></i></a></li>
+                                <li title="Get directions" class="hidden-xs"><a href=<%= @upcoming_event.directions_url %> class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
+                                <li title="Contact event manager"><a href="mailto:dabidmiranda@gmail.com" class="event-contact-link"><i class="icon-mail"></i></a></li>
                             </ul>
                         </div>
                     </section>
@@ -112,7 +111,7 @@
                                     <ul class="action-buttons">
                                         <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
                                         <li title="Get directions" class="hidden-xs"><a href="#" class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
-                                        <li title="Contact event manager"><a href="#" data-toggle="modal" data-target="#Econtact" class="event-contact-link"><i class="icon-mail"></i></a></li>
+                                        <li title="Contact event manager"><a href="mailto:dabidmiranda@gmail.com" class="event-contact-link"><i class="icon-mail"></i></a></li>
                                       </ul>
                                   </div>
                               </div>
