--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -49,87 +49,93 @@
       </div>
     </div>
 </div>
+
+
 <!-- Start Body Content -->
-<div class="main" role="main">
-  <div id="content" class="content full">
-      <div class="container">
-          <div class="row">
-                <div class="col-md-4 col-sm-5">
-                    <section class="upcoming-event format-standard event-list-item event-dynamic">
-                        <%= link_to event_path(@upcoming_event), class: "media-box" do %>
-                            <%= image_tag event_image_path(@upcoming_event), alt:"Event Pic" %>
-                        <% end %>
-                        <div class="upcoming-event-content">
-                            <span class="label label-primary upcoming-event-label">Next coming event</span>
-                            <div>
-                              <div class="timer-col"> <span id="days"><%= @days_left %></span> <span class="timer-type">Days left!</span> </div>
-                            </div>
-
-                            <h3><%= link_to @upcoming_event.name, event_path(@upcoming_event), class:"event-title" %></h3>
-                            <span class="meta-data">On <span class="event-date"><%= @upcoming_event.start_date.strftime("%A, %b. %d, %Y") %></span> at <span class="event-time"><%= @upcoming_event.start_time.strftime("%I:%M%p") %></span> at</span>
-                            <span class="meta-data event-location"> <span class="event-location-address"><%= @upcoming_event.address %>, <%= @upcoming_event.city %> <%= @upcoming_event.zip_code %></span></span>
-                        </div>
-                        <div class="upcoming-event-footer">
-                            <ul class="action-buttons">
-                                <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
-                                <li title="Get directions" class="hidden-xs"><a href=<%= @upcoming_event.directions_url %> class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
-                                <li title="Contact event manager"><a href="mailto:dabidmiranda@gmail.com" class="event-contact-link"><i class="icon-mail"></i></a></li>
-                            </ul>
-                        </div>
-                    </section>
-                </div>
-                <div class="col-md-8 col-sm-7">
-                    <div class="element-block events-listing">
-                        <div class="events-listing-header">
-                            <%= link_to "All Events", events_path, class:"pull-right basic-link" %>
-                            <h3 class="element-title">More Events</h3>
-                            <hr class="sm">
-                        </div>
-
-
-                        <% @events.each do |event| %>
-                          <div class="events-listing-content">
-                              <div class="event-list-item event-dynamic">
-                                <div class="event-list-item-date">
-                                    <span class="event-date">
-                                        <span class="event-day"><%= event.start_date.day %></span>
-                                        <span class="event-month"><%= I18n.t("date.abbr_month_names")[event.start_date.mon] %>, <%= event.start_date.year %></span>
-                                      </span>
-                                  </div>
-                                  <div class="event-list-item-info">
-                                    <div class="lined-info">
-                                        <h4><%= link_to event.name, event_path(event), class: "event-title" %></h4>
-                                      </div>
-                                    <div class="lined-info">
-                                        <span class="meta-data"><i class="fa fa-clock-o"></i> <%= event.start_date.strftime("%A") %>, <span class="event-time"><%= event.start_time.strftime("%I:%M%p") %></span></span>
-                                      </div>
-                                    <div class="lined-info event-location">
-                                        <span class="meta-data"><a href=<%= event.directions_url %> target="_blank"><i class="fa fa-map-marker"></i> <span class="event-location-address"><%= event.address %>, <%= event.city %> <%= event.zip_code %></span></a></span>
-                                      </div>
-                                  </div>
-                                  <div class="event-list-item-actions">
-                                    <ul class="action-buttons">
-                                        <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
-                                        <li title="Get directions" class="hidden-xs"><a href="#" class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
-                                        <li title="Contact event manager"><a href="mailto:dabidmiranda@gmail.com" class="event-contact-link"><i class="icon-mail"></i></a></li>
-                                      </ul>
-                                  </div>
+<% unless @upcoming_event.nil? %>
+  <div class="main" role="main">
+    <div id="content" class="content full">
+        <div class="container">
+            <div class="row">
+                  <div class="col-md-4 col-sm-5">
+                      <section class="upcoming-event format-standard event-list-item event-dynamic">
+                          <%= link_to event_path(@upcoming_event), class: "media-box" do %>
+                              <%= image_tag event_image_path(@upcoming_event), alt:"Event Pic" %>
+                          <% end %>
+                          <div class="upcoming-event-content">
+                              <span class="label label-primary upcoming-event-label">Next coming event</span>
+                              <div>
+                                <div class="timer-col"> <span id="days"><%= @days_left %></span> <span class="timer-type">Days left!</span> </div>
                               </div>
+
+                              <h3><%= link_to @upcoming_event.name, event_path(@upcoming_event), class:"event-title" %></h3>
+                              <span class="meta-data">On <span class="event-date"><%= @upcoming_event.start_date.strftime("%A, %b. %d, %Y") %></span> at <span class="event-time"><%= @upcoming_event.start_time.strftime("%I:%M%p") %></span> at</span>
+                              <span class="meta-data event-location"> <span class="event-location-address"><%= @upcoming_event.address %>, <%= @upcoming_event.city %> <%= @upcoming_event.zip_code %></span></span>
                           </div>
-                        <% end %>
+                          <div class="upcoming-event-footer">
+                              <ul class="action-buttons">
+                                  <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
+                                  <li title="Get directions" class="hidden-xs"><a href=<%= @upcoming_event.directions_url %> class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
+                                  <li title="Contact event manager"><a href="mailto:dabidmiranda@gmail.com" class="event-contact-link"><i class="icon-mail"></i></a></li>
+                              </ul>
+                          </div>
+                      </section>
+                  </div>
+                  <div class="col-md-8 col-sm-7">
+                      <div class="element-block events-listing">
+                          <div class="events-listing-header">
+                              <%= link_to "All Events", events_path, class:"pull-right basic-link" %>
+                              <h3 class="element-title">More Events</h3>
+                              <hr class="sm">
+                          </div>
+
+
+                          <% @events.each do |event| %>
+                            <div class="events-listing-content">
+                                <div class="event-list-item event-dynamic">
+                                  <div class="event-list-item-date">
+                                      <span class="event-date">
+                                          <span class="event-day"><%= event.start_date.day %></span>
+                                          <span class="event-month"><%= I18n.t("date.abbr_month_names")[event.start_date.mon] %>, <%= event.start_date.year %></span>
+                                        </span>
+                                    </div>
+                                    <div class="event-list-item-info">
+                                      <div class="lined-info">
+                                          <h4><%= link_to event.name, event_path(event), class: "event-title" %></h4>
+                                        </div>
+                                      <div class="lined-info">
+                                          <span class="meta-data"><i class="fa fa-clock-o"></i> <%= event.start_date.strftime("%A") %>, <span class="event-time"><%= event.start_time.strftime("%I:%M%p") %></span></span>
+                                        </div>
+                                      <div class="lined-info event-location">
+                                          <span class="meta-data"><a href=<%= event.directions_url %> target="_blank"><i class="fa fa-map-marker"></i> <span class="event-location-address"><%= event.address %>, <%= event.city %> <%= event.zip_code %></span></a></span>
+                                        </div>
+                                    </div>
+                                    <div class="event-list-item-actions">
+                                      <ul class="action-buttons">
+                                          <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
+                                          <li title="Get directions" class="hidden-xs"><a href="#" class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
+                                          <li title="Contact event manager"><a href="mailto:dabidmiranda@gmail.com" class="event-contact-link"><i class="icon-mail"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                          <% end %>
 
 
 
 
-                    </div>
-                </div>
-            </div>
-            <hr class="fw">
+                      </div>
+                  </div>
+              </div>
+              <hr class="fw">
 
-        </div>
-    </div>
-</div>
+          </div>
+      </div>
+  </div>
+<% end %>
 <!-- End Body Content -->
+
+
 <!-- Gallery updates -->
 <div class="gallery-updates cols5 clearfix">
   <ul>
